# libdbi-drivers

./: .gitignore  Makefile.am  README.md  README.osx  acinclude.m4  balabit-unix-build  configure.ac  configure.in
debian/: changelog  control  copyright  rules
drivers/: Makefile.am
drivers/firebird/: utility.c
drivers/freetds/: dbd_freetds.c
drivers/ingres/: dbd_ingres.c
drivers/msql/: dbd_msql.c
drivers/mysql/: dbd_mysql.c
drivers/null/: Makefile.am  README.md
drivers/oracle/: Makefile.am  dbd_oracle.c
drivers/pgsql/: dbd_pgsql.c
drivers/sqlite/: dbd_sqlite.c
drivers/sqlite3/: dbd_sqlite3.c
pe-build/: build
pe-build/pkg-desc/: libdbd-oracle.files
sbuild/: config.yml  configure_opts.py
src/: Makefile.am  dbd-null.c
tests/: Makefile.am  runtest.sh  test-dbd-null-error.c  test-dbd-null-sleep.c  test-dbd-null.c
tgz2build/: Makefile.am  libdbd-null.files  rules  tgz2deps
